# filepath: c:\github\search_devices\search_devices\Cargo.toml
[package]
name = "search_devices"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
ipnetwork = "0.19"
# GUI 用 egui + egui_glium
egui = "0.23"
egui_glium = "0.23"
# glium バージョンを egui_glium と合わせて 0.32 に更新
glium = "0.33"
glutin = "0.28"
